# Lexy

./: README.md
src/: CMakeLists.txt  main.cpp
src/MyLexer/: CMakeLists.txt  MyLexer.cpp  MyLexer.h  Token.h
src/include/: magic_enum.hpp
